--- a/index.html
+++ b/index.html
@@ -20,10 +20,12 @@
 
 
 
-
+<pre>
 <b style="color: black; font-size: 20px"> 
-Dúvida de como testar o sistema, acesso o tutorial no Youtube no rodapé do site---Apos finalizar o tempo qualquer coisa entre em contato comigo---Estou na torcida pra que obtenha bons resultados</b>
-
+Dúvida de como testar o sistema, acesso o tutorial no Youtube no rodapé do site
+Apos finalizar o tempo qualquer coisa entre em contato comigo
+Estou na torcida pra que obtenha bons resultados</b>
+</pre>
   <body>
     
     <center><div style="color:red; font-size: 30px; font-weight: normal" id="dday"></div></center>
